k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-2048-service
  labels:
    app.kubernetes.io/name: game-2048
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: game-2048
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
